# llmbot_plugin_bilisearch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
llmbot_plugin_bilisearch/: __init__.py
